Add document artifact metadata support (#505)
- Track hasArtifacts across document records, items, and API models
- Update hasArtifacts when artifacts are added or deleted
- Expose hasArtifacts in document and search OpenAPI schemas
- Add ArtifactStatus as a reserved attribute key
- Add/update tests for artifact state and reserved attribute lookup